feat(limit): Restructure limitations, implements barebones of sections

--- a/src/section/limitations.tex
+++ b/src/section/limitations.tex
@@ -1,7 +1,25 @@
 \section{Limitations}
 \label{sec:limitations}
 
-\Friending{} has limitations with respect to \abbrevation{G\&SD}.  Section ~\ref{sec:eventmatch} specifies the creation of events, specifically mixers, that ensure a match for all participants upon completion.  A mixer currently supports Heterosexual, Bisexual, Gay, and Lesbian matches.  With limited match support, the current version of \Friending{} does not support all \abbrevation{G\&SD}.  A future version may support matches providing more inclusivity for \abbrevation{G\&SD} individuals.
+\Friending{} has a series of limitations due to its 'Mobile-Only' philosophy. These limitations are listed below:
+
+\subsection{Email Addresses}
+\label{sec:limit_email}
+
+\subsection{Sexuality}
+\label{sec:limit_sexuality}
+
+\Friending{} only currently provides support for Heterosexual, Gay, and Lesbian matches. This is due to the current implementation of the matching algorithm, which can only handle the bipartite matching. As such, support in the application for \abbrevation{G\&SD} is minimal. The notable reason for this limitation is covered in Section ~\ref{sec:eventmatch} specifies the creation of events, specifically mixers, that ensure a match for all participants upon completion. 
+
+With limited match support, the current version of \Friending{} does not support all \abbrevation{G\&SD}. A future version may support matches for \abbrevation{G\&SD}.
+
+\subsection{Mobile Only}
+\label{sec:limit_mobile}
+
+\subsection{Questionnaire Customization}
+\label{sec:limit_questions}
+
+\Friending{} has limitations with respect to \abbrevation{G\&SD}.  Section ~\ref{sec:eventmatch} specifies the creation of events, specifically mixers, that ensure a match for all participants upon completion.  A mixer currently supports Heterosexual, Bisexual, Gay, and Lesbian matches.  
 
 The following are limitations of \Friending{}:
 \begin{enumerate}
