feat: Restructure the troubleshooting and tips in relation to limits

--- a/src/section/troubleshooting.tex
+++ b/src/section/troubleshooting.tex
@@ -1,6 +1,8 @@
 \section{Troubleshooting \& Tips}
 \label{sec:troubleshootandtips}
 
+%% Troubleshooting
+%%
 \subsection{Troubleshooting}
 \label{sec:troubleshoot}
 If you encounter difficulty while using \Friending{}, you should attempt each of the following steps until the problem is solved.
@@ -22,12 +24,26 @@ If you encounter difficulty while using \Friending{}, you should attempt each of
 \setDefaultMenuColor
 \end{enumerate}
 \end{itemize}
+
+If the issue persists, then you can contact \textemail{{support@friending.fake}} or reach out to us on twitter at \textsocial{@friending}. If billing information on your account is incorrect, please follow the steps outlined in ~\ref{sec:troubleshoot}. If the issues persist, then you can contact \textemail{{billing@friending.fake}}.
+
+%% Tips
+%%
 \subsection{Tips}
 \label{sec:tips}
-\begin{enumerate}
-\item Create a questionnaire before creating an event.
-\item Group similar types of questions into categories.
-\item Prototype a questionnaire by creating an event before publishing.
-\end{enumerate}
 
-If billing information on your account is incorrect, then you can contact \textbf{{billing@friending.no}}.
+\Friending{} is built with a Mobile First philosophy, following the standard conventions of mobile development. The tips below are suggestions from our team on how to make the most of \Friending{}.
+
+\begin{itemize}
+\item Create a questionnaire before creating an event, as this can help clarify who your event audience is.
+\item Group similar types of questions into categories, allowing for more weighting options.
+\item Search for similar events or groups for inspiration, or even to join in on the fun!
+\item When customizing your profile, don't forget to tell us about yourself! Photos are important, but so is About Me!
+\end{itemize}
+
+%% Feedback
+%%
+\subsection{Feedback}
+\label{sec:feedback}
+
+We are always happy to hear feedback from our users! You can reach out to us on twitter at \textsocial{@friending}, or visit us on Facebook at \textsocial{facebook.fake/Friending}
