feat: Move all screenshots to end of document as 'appendix-like'

--- a/src/section/scoring.tex
+++ b/src/section/scoring.tex
@@ -1,5 +1,5 @@
 \section{Mutual Match}
-\label{sec:matching}
+\label{sec:mutual}
 \Friending{} employs a matchmaking algorithm that creates a mutual match between participants after submitting their questionnaires.  \Friending{} does this by computing the comparison score of $Q \in Questions$ and $A,B \in Answers-to-Q$:
 \begin{equation}
     CS(Q, A_1, A_2) = COMP(A_1, A_2) * CAT(Q) * IMP(A_1) * IMP(A_2) * IMP(Q)
