style: Add separator docs

--- a/src/section/scoring.tex
+++ b/src/section/scoring.tex
@@ -1,5 +1,6 @@
 \section{Mutual Match}
 \label{sec:mutual}
+
 \Friending{} employs a matchmaking algorithm that creates a mutual match between participants after submitting their questionnaires.  \Friending{} does this by computing the comparison score of $Q \in Questions$ and $A,B \in Answers-to-Q$:
 \begin{equation}
     CS(Q, A_1, A_2) = COMP(A_1, A_2) * CAT(Q) * IMP(A_1) * IMP(A_2) * IMP(Q)
@@ -10,6 +11,8 @@ The compatibility score is computed from the comparison score of the questionnai
 
 A mutual match is defined as a match between two participants who have a compatibility score equal to or above the minimum match threshold.
 
+%% Comparison Score
+%%
 \subsection{Comparison Score}
 \label{sec:score_comp}
 
@@ -29,16 +32,22 @@ For example, given the set of options: [ \textit{tofu}, \textit{salad}, \textit{
 
 The usage $COMP(tofu, pizza)$ maps to the column by $A_1$ (i.e. \textit{tofu}), and row by $A_2$ (i.e. \textit{pizza}). The evaluation of the function would then be as such: $COMP(tofu, pizza) = 0.5$.
 
+%% Category
+%%
 \subsection{Category}
 \label{sec:score_category}
 
 The category weighting contributes to the equation as $CAT(Q)$ where $Q$ is the question definition. From this question definition the weighting of the category can be returned using $\in [0, 1]$.
 
+%% Importance
+%%
 \subsection{Importance}
 \label{sec:score_importance}
 
 The importance from the user is contributed to the equation as $IMP(A)$ where $A_i$ is the question definition. From this question definition the weighting set by the user can be returned with possible values $\in [ 0.0, 0.25, 0.5, 0.75, 1.0 ]$.
 
+%% Question Importance
+%%
 \subsection{Question Importance}
 \label{sec:scoreq_qimp}
 
