bug: Disable screenshots from the manual to resolve build

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -170,5 +170,5 @@
 \clearpage\input{section/matching.tex}
 \clearpage\input{section/troubleshooting.tex}
 \clearpage\input{section/limitations.tex}
-\clearpage\input{section/screenshots.tex}
+% \clearpage\input{section/screenshots.tex}
 \end{document}
