--- a/src/section/screenshots.tex
+++ b/src/section/screenshots.tex
@@ -2,100 +2,141 @@
 \\
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileSignup}{Sign Up}{fig:signup}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileSignin}{Sign In}{fig:signin}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileSettings}{Settings}{fig:settings}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileReset}{Password Reset}{fig:reset}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileAccountDelete}{Account Deletion}{fig:accountdelete}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileBilling}{Billing}{fig:billing}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileCredit}{Payment Details}{fig:payment}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileBillingNotification}{Billing Invoices}{fig:invoices}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileEventEdit}{Event Administration}{fig:eventadmin}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileEventQuestionnaire}{Event Sign up}{fig:eventsignup}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileEventEntered}{Event Question}{fig:eventquestion}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileEventEntry}{Event Questionnaire}{fig:eventquestionnaire}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileEventJoined}{Joined Notification}{fig:joined}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileEvent}{Event}{fig:event}
     }}
 \appscreens
     {{
-        \appscreen{\fileNavigation}{Navigation Menu}
+        \appscreen{\fileEvents}{Events}{fig:events}
     }}
     {{
-        \appscreen{\fileHomepage}{Home}
+        \appscreen{\fileFill}{Group Question}{fig:groupquestion}
     }}
-
-\appscreenshot{\fileSignup}{Sign Up}{Signing up as a new user}{fig:signup}
-\appscreenshot{\fileSignin}{Sign In}{Signing in to your account}{fig:signin}
-\appscreenshot{\fileSettings}{Settings}{Viewing your account settings}{fig:settings}
-\appscreenshot{\fileReset}{Password Reset}{Reset your password}{fig:reset}
-\appscreenshot{\fileAccountDelete}{Account Deletion}{The warning dialog before you delete your account}{fig:accountdelete}
-\appscreenshot{\fileBilling}{Billing}{Access to your billing information}{fig:billing}
-\appscreenshot{\fileCredit}{Payment Details}{Filling out credit card payment information}{fig:payment}
-\appscreenshot{\fileBillingNotification}{Billing Invoices}{Access to your billing invoices}{fig:invoices}
-\appscreenshot{\fileEventEdit}{Event Administration}{Administer changes to your event}{fig:eventadmin}
-\appscreenshot{\fileEventQuestionnaire}{Event Sign up}{Fill out the questionnaire when signing up for an event}{fig:eventsignup}
-\appscreenshot{\fileEventEntered}{Event Question}{Answer questions related to the event}{fig:eventquestion}
-\appscreenshot{\fileEventEntry}{Event Questionnaire}{Review your answers to the event questionnaire}{fig:eventquestionnaire}
-\appscreenshot{\fileEventJoined}{Joined Notification}{Review an event you have recently joined}{fig:joined}
-\appscreenshot{\fileEvent}{Event}{Check out the specifics of an event}{fig:event}
-\appscreenshot{\fileEvents}{Events}{A searchable view of the available events}{fig:events}
-\appscreenshot{\fileFill}{Group Question}{A question in a group questionnaire}{fig:groupquestion}
-\appscreenshot{\fileFilling}{Group Questionnaire}{Your answers to the group questionnaire}{fig:groupquestionnaire}
-\appscreenshot{\fileGroupEdit}{Group Administration}{Administer changes to your group}{fig:groupadmin}
-\appscreenshot{\fileGroupJoin}{Group}{A group you could join}{fig:group}
-\appscreenshot{\fileGroup}{Group Home}{Check out a group, and the available questionnaires}{fig:grouphome}
-\appscreenshot{\fileGroups}{Groups}{A searchable view of the available groups}{fig:groups}
-\appscreenshot{\fileAnswer}{Question Answer}{Your answer to a questionnaire question}{fig:answer}
-\appscreenshot{\fileAnswers}{Questionnaire Answers}{View your answers to the questionnaire}{fig:answers}
-\appscreenshot{\fileStart}{Opening page}{Opening screen of the application}{fig:start}
-\appscreenshot{\fileOnboarding}{Onboarding}{Introducing the application}{fig:onboarding}
-\appscreenshot{\fileHomepageEmpty}{First Run}{The first run home page}{fig:newuser}
-\appscreenshot{\fileNavigation}{Navigation Menu}{The primary navigation method}{fig:navigation}
-\appscreenshot{\fileHomepage}{Home}{A populated home page}{fig:home}
-\appscreenshot{\fileProfile}{Profile}{Your profile page}{fig:profile}
-\appscreenshot{\filePreferences}{Preferences}{Your notification preferences}{fig:preferences}
-\appscreenshot{\fileMatchingTypeOne}{Question Weights}{Set a weighting value for the answer options of a question}{fig:questionweight}
-\appscreenshot{\fileMatchingTypeTwo}{Option Weights}{Set weighting values for each answer option}{fig:optionweight}
-\appscreenshot{\fileQuestion}{Question}{Create a question for your questionnaire}{fig:question}
-\appscreenshot{\fileQuestionnaire}{Questionnaire}{Construct your questionnaire for an event or group}{fig:questionnaire}
-\appscreenshot{\fileQuestions}{Questions}{View the questions of your questionnaire}{fig:questions}
-\appscreenshot{\fileQuestionnaires}{Questionnaires}{Manage your questionnaires}{fig:questionnaires}
-\appscreenshot{\fileWeighting}{Weighting}{Weight answer options based on their importance}{fig:weighting}
-\appscreenshot{\fileCategories}{Categories}{Use categories to group similar questions}{fig:categories}
-\appscreenshot{\fileMatch}{Match}{View the profile of one of your match}{fig:match}
-\appscreenshot{\fileNotifications}{Notifications}{Manage your incoming notifications}{fig:notifications}
-
-
+\appscreens
+    {{
+        \appscreen{\fileFilling}{Group Questionnaire}{fig:groupquestionnaire}
+    }}
+    {{
+        \appscreen{\fileGroupEdit}{Group Administration}{fig:groupadmin}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileGroupJoin}{Group}{fig:group}
+    }}
+    {{
+        \appscreen{\fileGroup}{Group Home}{fig:grouphome}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileGroups}{Groups}{fig:groups}
+    }}
+    {{
+        \appscreen{\fileAnswer}{Question Answer}{fig:answer}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileAnswers}{Questionnaire Answers}{fig:answers}
+    }}
+    {{
+        \appscreen{\fileStart}{Opening page}{fig:start}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileOnboarding}{Onboarding}{fig:onboarding}
+    }}
+    {{
+        \appscreen{\fileHomepageEmpty}{First Run}{fig:newuser}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileNavigation}{Navigation Menu}{fig:navigation}
+    }}
+    {{
+        \appscreen{\fileHomepage}{Home}{fig:home}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileProfile}{Profile}{fig:profile}
+    }}
+    {{
+        \appscreen{\filePreferences}{Preferences}{fig:preferences}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileMatchingTypeOne}{Question Weights}{fig:questionweight}
+    }}
+    {{
+        \appscreen{\fileMatchingTypeTwo}{Option Weights}{fig:optionweight}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileQuestion}{Question}{fig:question}
+    }}
+    {{
+        \appscreen{\fileQuestionnaire}{Questionnaire}{fig:questionnaire}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileQuestions}{Questions}{fig:questions}
+    }}
+    {{
+        \appscreen{\fileQuestionnaires}{Questionnaires}{fig:questionnaires}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileWeighting}{Weighting}{fig:weighting}
+    }}
+    {{
+        \appscreen{\fileCategories}{Categories}{fig:categories}
+    }}
+\appscreens
+    {{
+        \appscreen{\fileMatch}{Match}{fig:match}
+    }}
+    {{
+        \appscreen{\fileNotifications}{Notifications}{fig:notifications}
+    }}
