Add in the text for groups

--- a/src/section/groups.tex
+++ b/src/section/groups.tex
@@ -3,12 +3,15 @@
 
 \subsection{Viewing groups}
 \label{sec:groups-view}
+To view a group, \action{tap} on the \keys{Group} button on the \quicknav. Then, while on the \Screenshot{Groups} (Figure~\ref{fig:groups}), \action{enter} a \textvar{search query} into the search bar, you will be presented with groups matching your query.  Select the \textcomp{group} that matches your query to view \Screenshot{Group Details} (Figure~\ref{fig:grouphome}).
 
 \subsection{Searching groups}
 \label{sec:groups-search}
+To search for a group, \action{tap} on the \keys{Group} button on the \quicknav. Then, while on the \Screenshot{Groups} (Figure~\ref{fig:groups}), \action{enter} a \textvar{search query} into the search bar, you will be presented with groups matching your query.
+
 
 \subsection{Joining a group}
 \label{sec:groups-join}
-To join a group, \action{tap} on the \keys{Group} button on the \quicknav.  Then, while on the \Screenshot{Groups} (Figure~\ref{fig:groups}), \action{enter} a \textvar{search query} into the search bar, you will be presented with groups matching your query.  Select the \textcomp{group} that matches your query to view \Screenshot{Group Details} (Figure~\ref{fig:grouphome}).
+To join a group, \action{tap} on the \keys{Group} button on the \quicknav. Then, while on the \Screenshot{Groups} (Figure~\ref{fig:groups}), \action{enter} a \textvar{search query} into the search bar, you will be presented with groups matching your query.  Select the \textcomp{group} that matches your query to view \Screenshot{Group Details} (Figure~\ref{fig:grouphome}).
 
-Then, while on the \Screenshot{Group Details} page, \action{tap} on the \keys{Join} button.  The group will be added to your \Screenshot{Home Page} (Figure~\ref{fig:home}).   
+Then, while on the \Screenshot{Group Details} page, \action{tap} on the \keys{Join} button. The group will be added to your \Screenshot{Home Page} (Figure~\ref{fig:home}).   
